# xai-starter

./: .gitignore  Experiments.md  README.md  WRAP_04052026_2246.md  WRAP_08062026_0001.md  WRAP_08062026_0034.md  WRAP_13062026_1450.md  _check_runs.py  _py_to_notebook.py  _quarto.yml  _resource_check.py  _smoke_mlflow.py  _verify_runner.py  _wire_gnn.py  _wire_plm_gpu.py  gnn_l2_node_classification.py  gnn_l3_graph_classification.py  gnn_l5_equivariant_gnn.py  index.qmd  mlflow_report.py  mlflow_utils.py  plm_demo.py  plm_l1_embeddings_probe.py  plm_tutorial.ipynb  pyproject.toml  requirements.txt  run_all_notebooks.ps1  run_all_notebooks.sh
capstones/: README.md  capstone_l1_end_to_end_plm_gnn.ipynb  capstone_l2_benchmark_suite.ipynb
clasp/: CLAUDE.md  README.md  _build_clasp_notebooks.py  _smoke_clasp.py  clasp_common.py  clasp_l1_attention_contacts.ipynb  clasp_l2_dca_baseline.ipynb  clasp_l3_neff_degradation.ipynb  clasp_l4_ig_fusion.ipynb  clasp_l5_benchmark.ipynb
common/: README.md  __init__.py  config.py  graphs.py  ig_l1_simple.ipynb  ig_l2_tiny_network.ipynb  metrics.py  structures.py
edits/: CLAUDE.md  README.md  _build_edits_notebooks.py  _smoke_edits.py  edits_common.py  edits_l1_predictor.ipynb  edits_l2_greedy_saturation.ipynb  edits_l3_gradient_counterfactual.ipynb  edits_l4_plausibility_constraint.ipynb  edits_l5_validation.ipynb
experiments/: README.md  batch_overnight.sh  exp_C_benchmark.sh  run_experiment.sh  run_plm_gpu.sh
gnn/: README.md  gnn_common.py  gnn_l10_oversmoothing.ipynb  gnn_l11_interaction_graphs.ipynb  gnn_l4_plm_plus_gnn.ipynb  (+9 more)
(+74 files in other folders)
